# osap_test_test

./: Dockerfile  Makefile  pyproject.toml
.github/workflows/: deploy.yaml
data/.dvc/: config
infra/: Pulumi.yaml  TraefikRoute.ts  index.ts  package-lock.json  package.json
src/my_model/serving/: main.py
src/my_model/training/: train.py
